--- a/style/main.css
+++ b/style/main.css
@@ -51,7 +51,7 @@ header {
 /* filme principail */
 .filme-principal {
     font-size: 16px;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%), url("/img/0.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%), url("/img/breakingbad.jpg");
     height: 400px;
     background-size: cover;
     display: flex;
