--- a/style/responsive.css
+++ b/style/responsive.css
@@ -8,6 +8,10 @@
         margin-top: 5px;
         width: 200px;
     }
+
+    .titulo {
+        font-size: 30px
+    }
 }
 
 @media screen and (min-width:1000px) {
